// DormDrop ERD — paste into https://dbdiagram.io to generate diagram

Table colleges {
  id uuid [pk, default: `gen_random_uuid()`]
  name text [not null]
  email_domain text [not null, unique]
  logo_path text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table students {
  id uuid [pk, note: 'FK → auth.users(id) ON DELETE CASCADE']
  college_id uuid [not null, ref: > colleges.id]
  display_name text [not null]
  pfp_path text
  bio text
  venmo_handle text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table listings {
  id uuid [pk, default: `gen_random_uuid()`]
  seller_id uuid [not null, ref: > students.id]
  college_id uuid [not null, ref: > colleges.id]
  title text [not null]
  description text
  category text [not null, note: 'CHECK: 20 categories']
  condition text [not null, note: 'CHECK: new|like_new|good|fair|poor']
  price_cents integer [not null, note: 'CHECK: >= 0']
  is_negotiable boolean [not null, default: false]
  photos jsonb [not null, default: '[]']
  status text [not null, default: 'active', note: 'CHECK: active|sold|reserved|expired|removed']
  ai_generated jsonb
  moderation_result jsonb
  expires_at timestamptz [not null]
  search_vector tsvector [note: 'trigger-maintained FTS']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table conversations {
  id uuid [pk, default: `gen_random_uuid()`]
  listing_id uuid [not null, ref: > listings.id]
  buyer_id uuid [not null, ref: > students.id]
  seller_id uuid [not null, ref: > students.id]
  status text [not null, default: 'open', note: 'CHECK: open|closed']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (listing_id, buyer_id) [unique]
  }
}

Table messages {
  id uuid [pk, default: `gen_random_uuid()`]
  conversation_id uuid [not null, ref: > conversations.id]
  sender_id uuid [not null, ref: > students.id]
  body text [not null]
  is_read boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table saved_listings {
  student_id uuid [not null, ref: > students.id]
  listing_id uuid [not null, ref: > listings.id]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (student_id, listing_id) [pk]
  }
}

Table reports {
  id uuid [pk, default: `gen_random_uuid()`]
  reporter_id uuid [not null, ref: > students.id]
  target_type text [not null, note: 'CHECK: listing|student|message']
  target_id uuid [not null, note: 'polymorphic reference']
  reason text [not null]
  status text [not null, default: 'pending']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}
